Bug 514214 - Do not update page titles for places already in history inside the Private Browsing mode; r=mak77